src/objects/MCAR__c.object
<CustomObject>
    <fields>
        <fullName>MCAR_Containment_Action__c</fullName>
        <description>Action that is taken to isolate the problem&apos;s effects from the customer (typically temporary actions); please provide details &amp; dates for additional steps.</description>
        <inlineHelpText>Action that is taken to isolate the problem&apos;s effects from the customer (typically temporary actions); please provide details &amp; dates for additional steps.</inlineHelpText>
        <label>3D Manufacturer Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_Creation_Date_Status_Open__c</fullName>
        <description>Date MCAR was opened by the Originator</description>
        <inlineHelpText>Date MCAR was opened by the Originator</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_Current_8D_Step__c</fullName>
        <label>Current 8D Step</label>
        <picklist>
            <picklistValues>
                <fullName>2D=Problem/Analysis</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3D=Continament Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4D=Root Cause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D=Permanent Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6D=Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7D=Prevent Recurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8D=Case Summary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Customer_Name__c</fullName>
        <description>Applicable only for field failures: name of the customer where the failure occurred</description>
        <inlineHelpText>Applicable only for field failures: name of the customer where the failure occurred</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Days_MCAR_Open__c</fullName>
        <description>How many day MCAR has been opened</description>
        <formula>if( ISPICKVAL(MCAR_Status__c, &apos;Open&apos;) ,today() - MCAR_Creation_Date_Status_Open__c, MCAR_Closed_Date__c-MCAR_Creation_Date_Status_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many day MCAR has been opened</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Days_Open__c</fullName>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Defect_Location__c</fullName>
        <description>The location in the supply chain where the defect(s) occurred or were found</description>
        <inlineHelpText>The location in the supply chain where the defect(s) occurred or were found</inlineHelpText>
        <label>Defect Location</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Site Inspection</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Defect_PPM__c</fullName>
        <description>The defective rate of the supplied component</description>
        <inlineHelpText>The defective rate of the supplied component</inlineHelpText>
        <label>Defect PPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Defect_Quantity__c</fullName>
        <description>Number of defective units that this MCAR case is addressing</description>
        <inlineHelpText>Number of defective units that this MCAR case is addressing</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Device_Level_Failure_Mode__c</fullName>
        <label>What was device-level failure mode?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_Est_Incident_Cost__c</fullName>
        <description>Estimated cost to our company of the defect</description>
        <inlineHelpText>Estimated cost to our company of the defect</inlineHelpText>
        <label>Established Incident Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCAR_Exp_Cont_Hrs__c</fullName>
        <description>Number of man-hours attributed to servicing, troubleshooting and isolating the issue to the supplied component</description>
        <inlineHelpText>Number of man-hours attributed to servicing, troubleshooting and isolating the issue to the supplied component</inlineHelpText>
        <label>Expected Containment Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Facility_Name__c</fullName>
        <description>The facility where the product was last assembled</description>
        <inlineHelpText>The facility where the product was last assembled</inlineHelpText>
        <label>Facility Name</label>
        <picklist>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruchsal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics - Changzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics - Suzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics - Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics - Tzcew/Gdansk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxconn - Hangzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Circuit - Wuxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Circuit - Penang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Circuit - Cassina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Circuit - Naples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML&amp;S Mfg. - Greifswald</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Salo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Haukipudas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Kuching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Tatabanya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Hortolandia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina-SCI - Kunshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRI Radio - Durach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub - Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub - Roosendaal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final assembly facility product was built in</description>
        <inlineHelpText>Final assembly facility product was built in</inlineHelpText>
        <label>Facility</label>
        <referenceTo>MCAR_Facility__c</referenceTo>
        <relationshipLabel>MCARs</relationshipLabel>
        <relationshipName>MCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_Factory_GM_Email__c</fullName>
        <description>A notification mail will be send to Factory GM Email id, if Severity Level is selected as High and Defect Location is Incoming or Production.</description>
        <inlineHelpText>A notification mail will be send to Factory GM Email id, if Severity Level is selected as High and Defect Location is Incoming or Production.</inlineHelpText>
        <label>Factory GM Email(s)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_Failure_Type__c</fullName>
        <description>General classification of failure category</description>
        <inlineHelpText>General classification of failure category</inlineHelpText>
        <label>Failure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Index_NSN_Code__c</fullName>
        <label>Index NSN Code</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_IsWorkflowExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWorkflowExecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_Legacy_No__c</fullName>
        <externalId>true</externalId>
        <label>Legacy MCAR No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Location__c</fullName>
        <description>Applicable only for field failures: The city, region, and country the product was in when the failure occurred</description>
        <inlineHelpText>Applicable only for field failures: The city, region, and country the product was in when the failure occurred</inlineHelpText>
        <label>Location (City &amp; Country)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Lot_Nbr_Date_Cd__c</fullName>
        <description>The manufacturing batch of the defective part</description>
        <inlineHelpText>The manufacturing batch of the defective part</inlineHelpText>
        <label>Lot Number / Date Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>MCARs</relationshipLabel>
        <relationshipName>MCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_Mfg_Part_Number__c</fullName>
        <label>Mfg. Part Number</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_NSN_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The NSN Part Number</description>
        <inlineHelpText>The NSN Part Number</inlineHelpText>
        <label>Code</label>
        <referenceTo>MCAR_MEPS__c</referenceTo>
        <relationshipLabel>MCARs</relationshipLabel>
        <relationshipName>MCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_NTF_Explanation__c</fullName>
        <description>Owner can explain the reasoning behind a “Cancelled” or “NTF”closure. The explanation field is not mandatory.</description>
        <inlineHelpText>Owner can explain the reasoning behind a “Cancelled” or “NTF” closure. The explanation field is not mandatory.</inlineHelpText>
        <label>Cancelled \ NTF Status Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_PMQ_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signals that Manufacturer has unequivocally accepted responsibility for the failure</description>
        <inlineHelpText>Signals that Manufacturer has unequivocally accepted responsibility for the failure</inlineHelpText>
        <label>Manufacturer Accepts Fault?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Description__c</fullName>
        <label>Description</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Family__c</fullName>
        <label>Part Family</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Lifecycle__c</fullName>
        <description>Status of NSN Part Number</description>
        <inlineHelpText>Status of NSN Part Number</inlineHelpText>
        <label>Lifecycle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Part_Type__c</fullName>
        <description>Part commodity type</description>
        <inlineHelpText>Part commodity type</inlineHelpText>
        <label>Part Type</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Product_Name__c</fullName>
        <description>The marketing name of the product for which the defective part is a component, i.e. BBU2, BCU, etc.</description>
        <inlineHelpText>The marketing name of the product for which the defective part is a component, i.e. BBU2, BCU, etc.</inlineHelpText>
        <label>Product Name</label>
        <picklist>
            <controllingField>Product_Family__c</controllingField>
            <picklistValues>
                <fullName>AA  Services Pooled Resources (L35099)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU A - A Multi Product Training (L00174)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU A - A Multi Product Training (L05700BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA Emerging Business Prof Services (L04200BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB  Partner BU PS (L00219)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB - Professional Services  (L00322)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Analytics PS (L00216)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Cloud PS (L00217)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB IoT PS (L00218)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Mess-PS (L00145)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Security PS (L00215)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA- Emerging Businesses Maintenance (L37010BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB  Mess Maintenance (L00150)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB  Partner BU Maintenance (L00230)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Analytics Maintenance (L00227)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Cloud Maintenance (L00228)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB IoT Maintenance (L00229)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Maintenance (L00304)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Security Maintenance (L00226)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA- Mformation (L00185)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM (L60180BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-Customer Exper. Managem.- M2M (L60181)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-NOS-Network Operation Software (L56012)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Maintenance (L08200BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Maintenance PP (L00209)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Professional Services (L08100BU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Professional Services (L54100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB  Common Software Platforms    (L42007)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB - Media Border Gateway Contr. (L61132)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-EB Cloud (L36043)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Quantity_to_Sup__c</fullName>
        <description>Quantity of defective samples that will be shipped</description>
        <inlineHelpText>Quantity of defective samples that will be shipped</inlineHelpText>
        <label>Quantity shipped to Manufacturer?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Address2__c</fullName>
        <label>RMA Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Address3__c</fullName>
        <label>RMA Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Address__c</fullName>
        <description>A responding person may enter the address to which they want the facility engineer to send the returned material or samples</description>
        <inlineHelpText>A responding person may enter the address to which they want the facility engineer to send the returned material or samples</inlineHelpText>
        <label>RMA Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Number__c</fullName>
        <description>Returned Material Authorization (RMA) number which the supplier will provide for you</description>
        <inlineHelpText>Returned Material Authorization (RMA) number which the supplier will provide for you</inlineHelpText>
        <label>RMA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Sent_Date__c</fullName>
        <description>Enter the shipping date here</description>
        <inlineHelpText>Enter the shipping date here</inlineHelpText>
        <label>RMA Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_RMA_Tracking_Number__c</fullName>
        <description>Enter the package tracking number here</description>
        <inlineHelpText>Enter the package tracking number here</inlineHelpText>
        <label>RMA Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Red_Tag_ID__c</fullName>
        <description>Related Red Tag Case, if applicable</description>
        <inlineHelpText>Related Red Tag Case, if applicable</inlineHelpText>
        <label>Red Tag ID#</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Serial_No__c</fullName>
        <description>List here any serial numbers from the defective quantities</description>
        <inlineHelpText>List here any serial numbers from the defective quantities</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Severity_Level__c</fullName>
        <description>Reference the &quot;MCAR Severity Description&quot; at left for clarification of Severity Levels and associated escalation.</description>
        <inlineHelpText>Reference the &quot;MCAR Severity Description&quot; at left for clarification of Severity Levels and associated escalation.</inlineHelpText>
        <label>Severity Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Status__c</fullName>
        <label>MCAR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Trouble Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Time_In_Service__c</fullName>
        <description>Applicable only for field failures: The amount of time the product has been with the customer</description>
        <inlineHelpText>Applicable only for field failures: The amount of time the product has been with the customer</inlineHelpText>
        <label>Time In Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufactureReason__c</fullName>
        <label>Manufacture Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacture_Accepts_Fault__c</fullName>
        <description>Signals that Manufacturer has unequivocally accepted responsibility for the failure</description>
        <inlineHelpText>Signals that Manufacturer has unequivocally accepted responsibility for the failure</inlineHelpText>
        <label>Manufacture Accepts Fault ?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Agrees_to_Pursue_Remaining__c</fullName>
        <label>Manufacturer:Pursue Remaining 8D Action?</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Comments__c</fullName>
        <description>Manufacturer shall please provide any additional comments in regards to the selections above.</description>
        <inlineHelpText>Manufacturer shall please provide any additional comments in regards to the selections above.</inlineHelpText>
        <label>Manufacturer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Site__c</fullName>
        <label>Manufacturer Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_PO_Reference__c</fullName>
        <inlineHelpText>Please add the valid purchase order reference number for this part.</inlineHelpText>
        <label>NSN PO Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oulu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM For Oulu</description>
        <label>Oulu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Approval__c</fullName>
        <description>Does the Owner approve the responses that the Manufacturer has provided?</description>
        <inlineHelpText>Does the Owner approve the responses that the Manufacturer has provided?</inlineHelpText>
        <label>Owner Approval</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Comments__c</fullName>
        <description>Owner shall provide any additional comments.</description>
        <inlineHelpText>Owner shall provide any additional comments.</inlineHelpText>
        <label>Owner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Is_Mfr_Involved_in_MCAR_Case__c</fullName>
        <description>Owner should specify if a Manufacturer&apos;s representative has been involved with the MCAR case via the MCAR tool.</description>
        <inlineHelpText>Owner should specify if a Manufacturer&apos;s representative has been involved with the MCAR case via the MCAR tool.</inlineHelpText>
        <label>Owner: Is Mfr. Involved in MCAR Case?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Business Line</label>
        <picklist>
            <controllingField>Product_Technology__c</controllingField>
            <picklistValues>
                <fullName>AA  Services Pooled Resources (L35099)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU A - A Multi Product Training (L05700)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA Emerging Business Prof Services (L04200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA- Emerging Businesses Maintenance (L37010)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM (L60180)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Maintenance (L08200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-CEM Professional Services (L08100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-Emerging Business (L04000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-NSO (L05600)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-NSO Maintenance (L09100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-NSO Professional Services (L14900)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-P-C Maintenance (L14600)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-P-C Professional Services (L35030)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU-AA-Policy  Charging (L36070)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA -Emerging Business (L08600)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-CEM Device Manager (L08300)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-CEM Maintenance (L08400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-CEM Professional Services (L08500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-EB Maintenance (L08900)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-EB PBU (L08800)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-EB Professional Services (L09000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-EB Security (L08700)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-NSO (L09200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-NSO Maintenance (L09300)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-NSO Professional Services (L09400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-P-C Maintenance (L14700)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-P-C Professional Services (L14500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-AA-Policy - Charging (L14800)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA Common Central Team (L00399)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK-A-A Central Teams (L00799)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>